fix search on mobile

--- a/src/components/FormularioBuscador.css
+++ b/src/components/FormularioBuscador.css
@@ -40,10 +40,11 @@
 @media (max-width: 450px) {
     .movie-search-form-input-header:focus {
         position: absolute;
-        top: 50px;
-        width: 90vw;
-        left: 50%;
-        transform: translateX(-92%);
+        top: 46px;
+        width: 100vw;
+        right: -50px;
+        border-radius: 0 0 10px 10px;
+        padding: 15px;
     }
     .movie-search-form-input-header {
         transition: 0s ease all;
